Fixed titlebar layout issues

--- a/src/AppLayout/Header/Header.css
+++ b/src/AppLayout/Header/Header.css
@@ -47,7 +47,7 @@
   border-bottom: 3px solid white;
 }
 
-.Header .nav .link + .link {
+.Header .nav .link {
   margin-left: 30px;
 }
 
